# Maplord

./: .dockerignore  .env.example  .env.prod.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.dev  PLAN.md  PLAN_ARCHITECTURE.md  README.md  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  compose.prod.yml  compose.yml  pyproject.toml
.claude/agents/: devops.md  django-developer.md  frontend-developer.md  rust-developer.md
.claude/skills/: devops-expert
.github/workflows/: ci.yml  flutter-build.yml  release.yml
apps/: dashboard.py  internal_auth.py  pagination.py  utils.py
apps/accounts/: admin.py  middleware.py  models.py  push.py  schemas.py  social_auth.py  views.py
apps/assets/: admin.py  api.py  models.py  registry.py
apps/chat/: admin.py
apps/clans/: api.py  (+2 more)
caddy/: Caddyfile  Caddyfile.prod
cli/: Cargo.toml
cli/src/: cli.rs  config.rs  main.rs  output.rs
cli/src/api/: client.rs  models.rs
cli/src/commands/: auth.rs  doctor.rs  init.rs  mod.rs  plugin.rs  server.rs
config/: asgi.py  celery.py  middleware.py  routing.py  settings.py  test_settings.py  test_urls.py  unfold_callbacks.py  urls.py
fixtures/: bot_users.json  game_config.json
flutter_app/: pubspec.yaml
frontend/: .dockerignore  .pnpmBuiltDependencies.json  Dockerfile.dev  next.config.ts  package.json  pnpm-lock.yaml  vitest.config.ts
gateway/: Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.gamenode
gateway/crates/zelqor-django/: Cargo.toml
gateway/crates/zelqor-django/src/: lib.rs
scripts/: docker_init.sh  generate_vapid_keys.py
(+269 files in other folders)
