[package]
name = "zelqor-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for the Zelqor game platform"

[[bin]]
name = "zelqor"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env", "color"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "process", "net", "io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
indicatif = "0.17"
dialoguer = "0.11"
console = "0.15"
tabled = "0.17"
anyhow = "1"
dirs = "6"
which = "7"
chrono = "0.4"
sha2 = "0.10"
hex = "0.4"
urlencoding = "2"
open = "5"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
